Bug 56229 -- removing useless dialog, r=serge, sr=beard